--- a/src/components/UploadImage/UploadImage.css
+++ b/src/components/UploadImage/UploadImage.css
@@ -18,7 +18,7 @@ input[type="file"] {
 
 .result {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
@@ -28,6 +28,7 @@ input[type="file"] {
 
 .response {
     display: flex;
+    flex-direction: column;
     align-self: center;
     background-color: aliceblue;
     border: 1px solid black;
@@ -39,4 +40,12 @@ input[type="file"] {
 .image {
     display: flex;
     align-self: center;
+}
+
+.response1 {
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    background-color: aliceblue;
+    margin: 2%;
 }
